[gd_scene load_steps=7 format=3 uid="uid://b0ijbdl007xym"]

[ext_resource type="Texture2D" uid="uid://jtcap8qn5wc6" path="res://assests/Screenshot 2025-11-17 at 22-39-57 Pixelater - Free Image to Pixel Art Converter Online.png" id="1_di836"]
[ext_resource type="Script" uid="uid://siromb728rto" path="res://UI_control_scenes/UI_scripts/campain_menu.gd" id="1_x1nhk"]
[ext_resource type="Texture2D" uid="uid://bjp4dglowao5k" path="res://assests/forest_spr.png" id="2_di836"]
[ext_resource type="FontFile" uid="uid://ojj8a3a7lb75" path="res://fonts/IMFellEnglish-Regular.ttf" id="2_f3ues"]
[ext_resource type="Texture2D" uid="uid://7kroj5grg4rl" path="res://assests/plains_spr.png" id="4_x1nhk"]
[ext_resource type="Texture2D" uid="uid://rxihk2r68a10" path="res://assests/hills_spring.png" id="5_m7jvq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1nhk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -11.0
offset_top = -10.0
offset_right = 5841.1055
offset_bottom = 4247.532
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1995863, 0.16817255)
texture = ExtResource("1_di836")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.08627451, 0.08627451, 0.08627451, 0.6509804)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0

[node name="level_1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 152.0
offset_bottom = 151.0
texture_normal = ExtResource("4_x1nhk")
stretch_mode = 0

[node name="Label" type="Label" parent="level_1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -24.0
offset_right = 29.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_f3ues")
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 19.0
offset_right = 323.0
offset_bottom = 151.0
texture_normal = ExtResource("2_di836")
stretch_mode = 0

[node name="Label" type="Label" parent="level_2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -24.0
offset_right = 29.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_f3ues")
theme_override_font_sizes/font_size = 60
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 372.0
offset_top = 19.0
offset_right = 504.0
offset_bottom = 151.0
texture_normal = ExtResource("5_m7jvq")
stretch_mode = 0

[node name="Label" type="Label" parent="level_3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.208
anchor_right = 0.5
anchor_bottom = 0.208
offset_left = -29.0
offset_top = -5.4560013
offset_right = 29.0
offset_bottom = 71.544
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_f3ues")
theme_override_font_sizes/font_size = 51
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="return_button" type="Button" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 555.0
offset_right = 151.0
offset_bottom = 626.0
theme_override_colors/font_hover_color = Color(0.90588236, 0, 0.3137255, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_f3ues")
theme_override_font_sizes/font_size = 31
text = "Main Menu"
flat = true

[connection signal="button_up" from="level_1" to="." method="_on_level_1_button_up"]
[connection signal="button_up" from="level_2" to="." method="_on_level_2_button_up"]
[connection signal="button_up" from="level_3" to="." method="_on_level_3_button_up"]
[connection signal="button_up" from="return_button" to="." method="_on_return_button_button_up"]
